--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.9.2
 Django==5.2.7
 django-debug-toolbar==6.0.0
+djangorestframework==3.16.1
+drf-nested-routers==0.95.0
 mysqlclient==2.2.7
 python-decouple==3.8
 sqlparse==0.5.3
