--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.4
 cryptography==46.0.3
 defusedxml==0.7.1
 Django==5.2.7
+django-cors-headers==4.9.0
 django-debug-toolbar==6.0.0
 django-filter==25.2
 djangorestframework==3.16.1
