--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 amqp==5.3.1
 asgiref==3.9.2
+attrs==25.4.0
+bidict==0.23.1
 billiard==4.2.4
+blinker==1.9.0
+brotli==1.2.0
 celery==5.6.0
 certifi==2025.11.12
 cffi==2.0.0
@@ -10,30 +14,54 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 colorama==0.4.6
+ConfigArgParse==1.7.1
 cryptography==46.0.3
 defusedxml==0.7.1
 Django==5.2.7
 django-cors-headers==4.9.0
 django-debug-toolbar==6.0.0
 django-filter==25.2
+django-redis==6.0.0
+django-silk==5.4.3
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 docopt==0.6.2
 drf-nested-routers==0.95.0
+drf-spectacular==0.29.0
 exceptiongroup==1.3.1
+Flask==3.1.2
+flask-cors==6.0.2
+Flask-Login==0.6.3
 flower==2.0.1
+gevent==25.9.1
+geventhttpclient==2.3.7
+gprof2dot==2025.4.14
+greenlet==3.3.0
+h11==0.16.0
 humanize==4.14.0
 idna==3.11
+inflection==0.5.1
 iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kombu==5.6.1
+locust==2.42.6
+locust-cloud==1.30.0
+MarkupSafe==3.0.3
+model-bakery==1.20.5
+msgpack==1.1.2
 mysqlclient==2.2.7
 oauthlib==3.3.1
 packaging==25.0
 pillow==12.0.0
+platformdirs==4.5.1
 pluggy==1.6.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
+psutil==7.1.3
 pycparser==2.23
 Pygments==2.19.2
 PyJWT==2.10.1
@@ -42,11 +70,18 @@ pytest-django==4.11.1
 pytest-watch==4.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-engineio==4.12.3
+python-socketio==5.15.1
 python3-openid==3.2.0
 pytz==2025.2
+PyYAML==6.0.3
+pyzmq==27.1.0
 redis==7.1.0
-requests==2.32.5
+referencing==0.37.0
+requests==2.32.4
 requests-oauthlib==2.0.0
+rpds-py==0.30.0
+simple-websocket==1.1.0
 six==1.17.0
 social-auth-app-django==5.6.0
 social-auth-core==4.8.1
@@ -54,7 +89,13 @@ sqlparse==0.5.3
 tornado==6.5.4
 tzdata==2025.3
 tzlocal==5.3.1
+uritemplate==4.2.0
 urllib3==2.6.2
 vine==5.1.0
 watchdog==6.0.0
 wcwidth==0.2.14
+websocket-client==1.9.0
+Werkzeug==3.1.4
+wsproto==1.3.2
+zope.event==6.1
+zope.interface==8.1.1
